# log-parser

./: README.md  pyproject.toml
src/log_parser/: __init__.py  cli.py  formatters.py  parser.py  patterns.py
tests/: test_main.py
